src/css/base.css
:root {
  /* === BREAKPOINTS ===
      s: 375px
      m: 768px
      l: 1280px

      /* ===== TYPOGRAPHY ===== */

  /* Extended Font Sizes */

  /*Letter spacing*/
  --ls-s: 0.02em;
  --ls-m: 0.04em;

  /* Body */
  --body-font: 400 16px/1.5 'Manrope', sans-serif;

  /* Small text */
  --small-font: 400 14px/1.171 'Manrope', sans-serif;

  /* Body Medium */
  --medium-font: 400 18px/1.67 'Manrope', sans-serif;
  --medium-bold-font: 700 20px/1.2 'Manrope', sans-serif;

  /* Body Large */
  --large-font: 700 32px/1.38 'Manrope', sans-serif;

  /* Button Text */
  --btn-font: 700 14px/1.71 'Manrope', sans-serif;

  /* Link Text */
  --link-font: 400 12px/1.33 'Manrope', sans-serif;

  /* Menu Text */
  --menu-font: 600 14px/1.29 'Manrope', sans-serif;

  /* Headers */
  --h1-font: 700 38px/1.05 'Manrope', sans-serif;
  --h3-font: 700 32px/1.13 'Manrope', sans-serif;
  --h4-font: 700 20px/1.2 'Manrope', sans-serif;

  --indent-x-32: 32px;
  --indent-y-20: 20px;
  --indent-y-40: 40px;

  --items-2: 2;
  --items-3: 3;
  --items-4: 4;

  --rect-top: 26px;
  --rect-right: 99px;
  --rect-width: 39px;

  /* ===== COLORS ===== */
  --black: 18, 20, 23; /* #121417 */
  --cl-black-rgb: rgb(var(--black));
  --cl-black-rgba--50: rgba(var(--black), 0.5);
  --cl-black-rgba--80: rgba(var(--black), 0.8);
  --green: #4dc274;
  --green-rgb: 77, 194, 116; /* #4dc274 */
  --mint: #bee8cc;
  --light-green: #d4fde1;
  --gray: #f3f5f6;
  --white: 255, 255, 255; /* #ffffff */
  --cl-white: rgb(var(--white));
  --cl-white-rgba--40: rgba(var(--white), 0.4);

  /* ===== STATES ===== */

  --interactive-color: #38ae5f;
  --background-gradient: linear-gradient(
    80deg,
    var(--green) 0%,
    var(--mint) 100%
  );
  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

html {
  scroll-behavior: smooth;
}

section {
  scroll-margin-top: 80px;
  margin-bottom: 80px;
}

@media (min-width: 768px) {
  section {
    margin-bottom: 100px;
  }
}

@media (min-width: 1280px) {
  section {
    margin-bottom: 150px;
  }
}

body {
  font: var(--body-font);
  color: var(--cl-black-rgb);
}

h1,
h2 {
  font: var(--h1-font);
  color: rgb(var(--white));
  text-align: center;
}

h3 {
  font: var(--h3-font);
  letter-spacing: var(--ls-s);
  color: var(--cl-black-rgb);
  text-align: center;
}

h4 {
  font: var(--h4-font);
  letter-spacing: var(--ls-s);
  color: var(--cl-black-rgb);
  text-align: center;
}

.title-head {
  max-width: 335px;
  margin: 0 auto;
  & .section-title {
    font: var(--h3-font);
    color: var(--cl-black-rgb);
    letter-spacing: var(--ls-s);
    text-align: center;
    margin-bottom: 16px;
  }

  & .section-title-descr {
    font: var(--small-font);
    color: var(--cl-black-rgba--80);
    text-align: center;
    margin-bottom: 40px;
  }
}

@media only screen and (min-width: 768px) {
  h1,
  h2 {
    font-size: 60px;
    line-height: 117%;
  }

  h3 {
    font-size: 40px;
    line-height: 120%;
  }

  .title-head {
    max-width: 658px;
    & .section-title {
      font-size: 40px;
      line-height: 120%;
      margin-bottom: 16px;
    }

    & .section-title-descr {
      margin: 0 auto;
      font: var(--medium-font);
      color: var(--cl-black-rgba--50);
      margin-bottom: 64px;
    }
  }
}

@media only screen and (min-width: 1280px) {
  .title-head {
    max-width: 665px;
  }
}

/*@media only screen and (min-width: 768px) {*/
/*  .title-head {*/
/*    & .section-title-descr {*/
/*      max-width: 709px;*/
/*    }*/
/*  }*/
/*}*/

.container {
  width: 100%;
  padding: 0 20px;
  margin: 0 auto;
}

@media only screen and (min-width: 768px) {
  .container {
    max-width: 704px;
    padding: 0;
  }
}

@media only screen and (min-width: 1280px) {
  .container {
    max-width: 1024px;
  }
}

.brand-logo {
  display: inline-block;
  --logo-accent-color: var(--green);
  color: var(--black);

  & .svg-fill {
    display: block;
    width: 182px;
    height: 27px;
  }
}

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 16px 63px;
  border: 1px solid transparent;
  box-sizing: border-box;
  border-radius: 12px;
  background-color: var(--green);
  font: var(--btn-font);
  color: var(--cl-white);
  text-decoration: none;
  text-align: center;
  white-space: nowrap;
  transition:
    background-color var(--transition),
    color var(--transition),
    border-color var(--transition);

  &:hover,
  &:focus-visible {
    background-color: var(--interactive-color);
    border-color: var(--cl-white-rgba--40);
  }

  &:active {
    background-color: var(--interactive-color);
    color: var(--cl-white);
    border-color: transparent;
  }
}

@media only screen and (min-width: 768px) {
  .button {
    font-size: 18px;
    font-weight: 700;
    line-height: 1.56;
  }
}
.rectangle {
  position: relative;

  &::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translateX(-50%);
    width: 100%;
    height: 12px;
    border-radius: 8px;
    background: var(--mint);
    z-index: -1;
  }
}

@media only screen and (min-width: 768px) {
  .rectangle::after {
    height: 20px;
  }
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

